# myagent

./: .env.example  .gitignore  CODEx_HANDOFF.md  DEVELOPMENT_TRACKER.md  FEATURE_STATUS.md  KERNEL_STATUS.md  PROJECT_STATUS.md  README.md  ROADMAP.md  USER_MANUAL.md  pyproject.toml  qa.md
scripts/: debug_openai_compat.py  smoke_agent_tasks.py
src/myagent/: api.py  cli.py  config.py  mcp.py  memory.py  observability.py  prompts.py
src/myagent/agent/: __init__.py  loop.py
src/myagent/builtin_skills/code_debugger/: SKILL.md
src/myagent/builtin_skills/feature_implementer/: SKILL.md
src/myagent/builtin_skills/repo_explainer/: SKILL.md
src/myagent/providers/: __init__.py  base.py  mock_provider.py  openai_provider.py
src/myagent/session/: __init__.py  store.py
src/myagent/skills/: __init__.py  loader.py  registry.py
src/myagent/tools/: __init__.py  base.py  builtin.py  loader.py  registry.py
tests/: test_agent_loop.py  test_api.py  test_builtin_tools.py  test_cli.py  test_mcp.py  test_memory.py  test_observability.py  test_openai_provider.py  test_session_store.py  test_skills.py
tests/fixtures/: fake_mcp_server.py
